<resources>
    <string name="app_name">ProManager</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="textintro">Collaborate and plan Together Across Multiple Devices on ProManagers Minimalist Interface.</string>

    <string name="sign_up_description_text">Enter your name, email id and password to register with us</string>
    <string name="name">Enter Your Name</string>
    <string name="password">Enter Your Password</string>
    <string name="email">Enter Your Email</string>

    <string name="sign_in_description_text">Enter your Email and password to login to your account</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Add Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>

    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_members">Select Member</string>
    <string name="default_notification_channel_id">ProManager_notification</string>

</resources>