<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/lets_get_started_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
        android:text="@string/textintro"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/intro_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="353dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_button_rounded"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_button_rounded"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />


</androidx.constraintlayout.widget.ConstraintLayout>